--- a/seq2seq.ipynb
+++ b/seq2seq.ipynb
@@ -4,43 +4,223 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "from __future__ import unicode_literals, print_function, division\n",
+    "from io import open\n",
+    "import unicodedata\n",
+    "import re\n",
+    "import random\n",
+    "\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "from torch import optim\n",
+    "import torch.nn.functional as F\n",
+    "\n",
+    "import numpy as np\n",
+    "from torch.utils.data import TensorDataset, DataLoader, RandomSampler\n",
+    "\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SOS_token = 0\n",
+    "EOS_token = 1\n",
+    "\n",
+    "class Lang:\n",
+    "    def __init__(self,name):\n",
+    "        self.name = name\n",
+    "        self.word2index = {}\n",
+    "        self.word2count = {}\n",
+    "        self.index2word = {}\n",
+    "        self.n_words = 2\n",
+    "\n",
+    "    def addSentence(self,sentence):\n",
+    "        for word in sentence.split(' '):\n",
+    "            self.addWord(word)\n",
+    "    \n",
+    "    def addWord(self,word):\n",
+    "        if word not in self.word2index:\n",
+    "            self.word2index[word] = self.n_words\n",
+    "            self.word2count[word] = 1\n",
+    "            self.index2word[self.n_words] = word\n",
+    "        else:\n",
+    "            self.word2count[word] += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def unicodetoASCII(s):\n",
+    "    return ''.join(\n",
+    "        c for c in unicodedata.normalize('NFD',s)\n",
+    "        if unicodedata.category(c) != 'Mn'\n",
+    "    )\n",
+    "\n",
+    "def normalizeString(s):\n",
+    "    s = unicodetoASCII(s.lower().strip())\n",
+    "    s = re.sub(r\"([.!?])\", r\" \\1\", s)\n",
+    "    s = re.sub(r\"[^a-zA-z!?]\",r\" \",s)\n",
+    "    return s.strip()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def readLangs(lang1, lang2, reverse = False):\n",
+    "    print(\"Reading......\")\n",
+    "\n",
+    "    lines = open('data/%s-%s.txt' % (lang1, lang2),encoding = 'utf-8').read().strip().split('\\n')\n",
+    "\n",
+    "    pairs = [[normalizeString(s) for s in l.split('\\t')] for l in lines]\n",
+    "\n",
+    "    if reverse:\n",
+    "        pairs = [list(reversed(p)) for p in pairs]\n",
+    "        input_lang = Lang(lang1)\n",
+    "        output_lang = Lang(lang2)\n",
+    "    else:\n",
+    "        input_lang = Lang(lang1)\n",
+    "        output_lang = Lang(lang2)\n",
+    "    \n",
+    "    return input_lang, output_lang, pairs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "MAX_LENGTH = 10\n",
+    "\n",
+    "eng_prefixes = (\n",
+    "    \"i am \", \"i m \",\n",
+    "    \"he is\", \"he s \",\n",
+    "    \"she is\", \"she s \",\n",
+    "    \"you are\", \"you re \",\n",
+    "    \"we are\", \"we re \",\n",
+    "    \"they are\", \"they re \"\n",
+    ")\n",
+    "\n",
+    "def filterPair(p):\n",
+    "    return len(p[0].split(' ')) < MAX_LENGTH and \\\n",
+    "        len(p[1].split(' ')) < MAX_LENGTH and \\\n",
+    "        p[1].startswith(eng_prefixes)\n",
+    "\n",
+    "\n",
+    "def filterPairs(pairs):\n",
+    "    return [pair for pair in pairs if filterPair(pair)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\dell\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\torchtext\\__init__.py:7: SyntaxWarning: invalid escape sequence '\\ '\n",
-      "  \"\\n/!\\ IMPORTANT WARNING ABOUT TORCHTEXT STATUS /!\\ \\n\"\n"
-     ]
-    },
-    {
-     "ename": "OSError",
-     "evalue": "[WinError 127] The specified procedure could not be found",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mOSError\u001b[0m                                   Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 4\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtorch\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mnn\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnn\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtorch\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01moptim\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01moptim\u001b[39;00m\n\u001b[1;32m----> 4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtorchtext\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdatasets\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Multi30k\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtorchtext\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdata\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Field,BucketIterator\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n",
-      "File \u001b[1;32mc:\\Users\\dell\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\torchtext\\__init__.py:18\u001b[0m\n\u001b[0;32m     15\u001b[0m     _WARN \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m\n\u001b[0;32m     17\u001b[0m \u001b[38;5;66;03m# the following import has to happen first in order to load the torchtext C++ library\u001b[39;00m\n\u001b[1;32m---> 18\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtorchtext\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m _extension  \u001b[38;5;66;03m# noqa: F401\u001b[39;00m\n\u001b[0;32m     20\u001b[0m _TEXT_BUCKET \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhttps://download.pytorch.org/models/text/\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m     22\u001b[0m _CACHE_DIR \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mexpanduser(os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(_get_torch_home(), \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtext\u001b[39m\u001b[38;5;124m\"\u001b[39m))\n",
-      "File \u001b[1;32mc:\\Users\\dell\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\torchtext\\_extension.py:64\u001b[0m\n\u001b[0;32m     59\u001b[0m     \u001b[38;5;66;03m# This import is for initializing the methods registered via PyBind11\u001b[39;00m\n\u001b[0;32m     60\u001b[0m     \u001b[38;5;66;03m# This has to happen after the base library is loaded\u001b[39;00m\n\u001b[0;32m     61\u001b[0m     \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtorchtext\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m _torchtext  \u001b[38;5;66;03m# noqa\u001b[39;00m\n\u001b[1;32m---> 64\u001b[0m \u001b[43m_init_extension\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32mc:\\Users\\dell\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\torchtext\\_extension.py:58\u001b[0m, in \u001b[0;36m_init_extension\u001b[1;34m()\u001b[0m\n\u001b[0;32m     55\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m _mod_utils\u001b[38;5;241m.\u001b[39mis_module_available(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtorchtext._torchtext\u001b[39m\u001b[38;5;124m\"\u001b[39m):\n\u001b[0;32m     56\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mImportError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtorchtext C++ Extension is not found.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m---> 58\u001b[0m \u001b[43m_load_lib\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mlibtorchtext\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m     59\u001b[0m \u001b[38;5;66;03m# This import is for initializing the methods registered via PyBind11\u001b[39;00m\n\u001b[0;32m     60\u001b[0m \u001b[38;5;66;03m# This has to happen after the base library is loaded\u001b[39;00m\n\u001b[0;32m     61\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtorchtext\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m _torchtext\n",
-      "File \u001b[1;32mc:\\Users\\dell\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\torchtext\\_extension.py:50\u001b[0m, in \u001b[0;36m_load_lib\u001b[1;34m(lib)\u001b[0m\n\u001b[0;32m     48\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m path\u001b[38;5;241m.\u001b[39mexists():\n\u001b[0;32m     49\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;01mFalse\u001b[39;00m\n\u001b[1;32m---> 50\u001b[0m \u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mops\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mload_library\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpath\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     51\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m\n",
-      "File \u001b[1;32mc:\\Users\\dell\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\torch\\_ops.py:1295\u001b[0m, in \u001b[0;36m_Ops.load_library\u001b[1;34m(self, path)\u001b[0m\n\u001b[0;32m   1290\u001b[0m path \u001b[38;5;241m=\u001b[39m _utils_internal\u001b[38;5;241m.\u001b[39mresolve_library_path(path)\n\u001b[0;32m   1291\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m dl_open_guard():\n\u001b[0;32m   1292\u001b[0m     \u001b[38;5;66;03m# Import the shared library into the process, thus running its\u001b[39;00m\n\u001b[0;32m   1293\u001b[0m     \u001b[38;5;66;03m# static (global) initialization code in order to register custom\u001b[39;00m\n\u001b[0;32m   1294\u001b[0m     \u001b[38;5;66;03m# operators with the JIT.\u001b[39;00m\n\u001b[1;32m-> 1295\u001b[0m     \u001b[43mctypes\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mCDLL\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpath\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   1296\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mloaded_libraries\u001b[38;5;241m.\u001b[39madd(path)\n",
-      "File \u001b[1;32mc:\\Users\\dell\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\ctypes\\__init__.py:379\u001b[0m, in \u001b[0;36mCDLL.__init__\u001b[1;34m(self, name, mode, handle, use_errno, use_last_error, winmode)\u001b[0m\n\u001b[0;32m    376\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_FuncPtr \u001b[38;5;241m=\u001b[39m _FuncPtr\n\u001b[0;32m    378\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m handle \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m--> 379\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_handle \u001b[38;5;241m=\u001b[39m \u001b[43m_dlopen\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_name\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmode\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    380\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m    381\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_handle \u001b[38;5;241m=\u001b[39m handle\n",
-      "\u001b[1;31mOSError\u001b[0m: [WinError 127] The specified procedure could not be found"
+      "Reading......\n",
+      "Read 135842 sentence pairs\n",
+      "Trimmed to 11252 sentence pairs\n",
+      "Counting words...\n",
+      "Counted words:\n",
+      "eng 2\n",
+      "fra 2\n",
+      "['je vous laisse partir', 'i m letting you go']\n"
      ]
     }
    ],
    "source": [
-    "import torch\n",
-    "import torch.nn as nn\n",
-    "import torch.optim as optim\n",
-    "from torchtext.datasets import Multi30k\n",
-    "from torchtext.data import Field,BucketIterator\n",
-    "import numpy as np\n",
-    "import spacy\n",
-    "import random\n",
-    "from torch.utils.tensorboard import SummaryWriter\n"
+    "def prepareData(lang1, lang2, reverse=False):\n",
+    "    input_lang, output_lang, pairs = readLangs(lang1, lang2, reverse)\n",
+    "    print(\"Read %s sentence pairs\" % len(pairs))\n",
+    "    pairs = filterPairs(pairs)\n",
+    "    print(\"Trimmed to %s sentence pairs\" % len(pairs))\n",
+    "    print(\"Counting words...\")\n",
+    "    for pair in pairs:\n",
+    "        input_lang.addSentence(pair[0])\n",
+    "        output_lang.addSentence(pair[1])\n",
+    "    print(\"Counted words:\")\n",
+    "    print(input_lang.name, input_lang.n_words)\n",
+    "    print(output_lang.name, output_lang.n_words)\n",
+    "    return input_lang, output_lang, pairs\n",
+    "\n",
+    "input_lang, output_lang, pairs = prepareData('eng', 'fra', True)\n",
+    "print(random.choice(pairs))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class EncoderRNN(nn.Module):\n",
+    "    def __init__(self,input_size,hidden_size,dropout_p=0.1):\n",
+    "        super(EncoderRNN,self).__init__()\n",
+    "        self.hidden_size = hidden_size\n",
+    "\n",
+    "        self.embedding = nn.Embedding(input_size,hidden_size)\n",
+    "        self.gru = nn.GRU(hidden_size,hidden_size)\n",
+    "        self.dropout = nn.Dropout(dropout_p)\n",
+    "    \n",
+    "    def forward(self,input):\n",
+    "        embedded = self.dropout(self.embedding(input))\n",
+    "        output,hidden = self.gru(embedded)\n",
+    "        return output, hidden"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class DecoderRNN(nn.Module):\n",
+    "    def __init__(self,hidden_size,output_size):\n",
+    "        super(DecoderRNN,self).__init__()\n",
+    "        self.embedding = nn.Embedding(output_size,hidden_size)\n",
+    "        self.gru = nn.GRU(hidden_size,hidden_size,batch_first=True)\n",
+    "        self.out = nn.Linear(hidden_size,output_size)\n",
+    "    \n",
+    "    def forward(self,encoder_outputs,encoder_hidden,target_tensor=None):\n",
+    "        batch_size = encoder_outputs.size(0)\n",
+    "        decoder_input = torch.empty(batch_size=1,dtype=torch.long,device=device).fill(SOS_token)\n",
+    "        decoder_hidden = encoder_hidden\n",
+    "        decoder_outputs = []\n",
+    "\n",
+    "        for i in range(MAX_LENGTH):\n",
+    "            decoder_output, decoder_hidden = self.forward_step(decoder_input,decoder_hidden)\n",
+    "            decoder_outputs.append(decoder_output)\n",
+    "            if target_tensor is not None:\n",
+    "                decoder_input = target_tensor[:,i].unsqueeze(1)\n",
+    "            else:\n",
+    "                _, topi = decoder_output.topk(1)\n",
+    "                decoder_input = topi.squeeze(-1).detach()\n",
+    "\n",
+    "        decoder_outputs = torch.cat(decoder_outputs,dim=1)\n",
+    "        decoder_outputs = F.log_softmax(decoder_outputs,dim=1)\n",
+    "        return decoder_outputs, decoder_hidden, None\n",
+    "    \n",
+    "    def forward_step(self,input,hidden):\n",
+    "        output = self.embedding(input)\n",
+    "        output = F.relu(output)\n",
+    "        output, hidden = self.gru(output, hidden)\n",
+    "        output = self.out(output)\n",
+    "        return output, hidden"
    ]
   }
  ],
@@ -60,7 +240,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
