--- a/seq2seq.ipynb
+++ b/seq2seq.ipynb
@@ -139,7 +139,7 @@
       "Counted words:\n",
       "eng 2\n",
       "fra 2\n",
-      "['je vous laisse partir', 'i m letting you go']\n"
+      "['je vais etre ton avocat', 'i m going to be your lawyer']\n"
      ]
     }
    ],
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +240,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.10"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
